--- a/app/src/main/res/layout/fragment_lead_profile.xml
+++ b/app/src/main/res/layout/fragment_lead_profile.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.LeadListFragment">
+    tools:context=".ui.fragments.LeadProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
