--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="grey">#9C9DAF</color>
+    <color name="divider_color">#F5F5F8</color>
+    <color name="dark_blue">#00022F</color>
 </resources>
