Bottom nav menu is added

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="grey">#9C9DAF</color>
     <color name="divider_color">#F5F5F8</color>
     <color name="dark_blue">#00022F</color>
+    <color name="blue">#6355FF</color>
 </resources>
