--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/homeFragment">
-
+    app:startDestination="@id/leadListFragment">
     <fragment
-        android:id="@+id/homeFragment"
+        android:id="@+id/leadListFragment"
         android:name="com.example.leadcrm.ui.fragments.LeadListFragment"
-        android:label="fragment_home"
+        android:label="fragment_lead_list"
         tools:layout="@layout/fragment_lead_list" />
 </navigation>
