--- a/app/src/main/res/layout/progress_bar.xml
+++ b/app/src/main/res/layout/progress_bar.xml
@@ -4,9 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/progress_bar_bg"
-    android:clipChildren="false"
-    android:clipToOutline="false"
-    android:padding="14dp">
+    android:paddingHorizontal="14dp"
+    android:paddingTop="14dp">
 
     <TextView
         android:id="@+id/tvStatusLabel"
@@ -52,17 +51,18 @@
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
+        android:clipToPadding="false"
         android:orientation="horizontal"
+        android:padding="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvStatusLabel">
+        app:layout_constraintTop_toBottomOf="@id/tvStatusLabel"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <View
             android:layout_width="0dp"
             android:layout_height="9dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="6dp"
             android:layout_weight="1"
             android:background="@drawable/completed_step"
             android:elevation="4dp" />
@@ -71,7 +71,6 @@
             android:layout_width="0dp"
             android:layout_height="9dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="6dp"
             android:layout_weight="1"
             android:background="@drawable/completed_step"
             android:elevation="4dp" />
@@ -80,7 +79,6 @@
             android:layout_width="0dp"
             android:layout_height="9dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="6dp"
             android:layout_weight="1"
             android:background="@drawable/completed_step"
             android:elevation="4dp" />
@@ -89,7 +87,6 @@
             android:layout_width="0dp"
             android:layout_height="9dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="6dp"
             android:layout_weight="1"
             android:background="@drawable/completed_step"
             android:elevation="4dp" />
@@ -106,7 +103,6 @@
             android:layout_width="0dp"
             android:layout_height="9dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="6dp"
             android:layout_weight="1"
             android:background="@drawable/step" />
 
@@ -114,7 +110,6 @@
             android:layout_width="0dp"
             android:layout_height="9dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="6dp"
             android:layout_weight="1"
             android:background="@drawable/step" />
 
@@ -122,7 +117,6 @@
             android:layout_width="0dp"
             android:layout_height="9dp"
             android:layout_marginRight="4dp"
-            android:layout_marginBottom="6dp"
             android:layout_weight="1"
             android:background="@drawable/step" />
 
