--- a/app/src/main/res/layout/buttons_chain.xml
+++ b/app/src/main/res/layout/buttons_chain.xml
@@ -67,7 +67,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginRight="4dp"
-        android:background="@drawable/icon_purple_bg"
+        android:background="@drawable/icon_purple_disabled_bg"
         android:elevation="8dp"
         android:padding="15dp"
         android:src="@drawable/ic_mail"
@@ -82,7 +82,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
         android:text="Mail"
-        android:textColor="@color/blue"
+        android:textColor="@color/disabled_button_icon_color"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -95,7 +95,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginRight="4dp"
-        android:background="@drawable/icon_purple_bg"
+        android:background="@drawable/icon_purple_disabled_bg"
         android:elevation="8dp"
         android:padding="15dp"
         android:src="@drawable/ic_event"
@@ -109,7 +109,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
         android:text="Follow up"
-        android:textColor="@color/blue"
+        android:textColor="@color/disabled_button_icon_color"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -122,7 +122,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginRight="4dp"
-        android:background="@drawable/icon_purple_bg"
+        android:background="@drawable/icon_purple_disabled_bg"
         android:elevation="8dp"
         android:padding="15dp"
         android:src="@drawable/ic_meeting"
@@ -137,7 +137,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="13dp"
         android:text="Meeting"
-        android:textColor="@color/blue"
+        android:textColor="@color/disabled_button_icon_color"
         android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
