--- a/app/src/main/res/layout/fragment_lead_profile.xml
+++ b/app/src/main/res/layout/fragment_lead_profile.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.LeadProfileFragment"
-    android:clipToPadding="false">
+    android:clipToPadding="false"
+    tools:context=".ui.fragments.LeadProfileFragment">
 
     <FrameLayout
         android:id="@+id/toolbar"
@@ -99,9 +99,8 @@
         layout="@layout/buttons_chain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar"/>
-
-
+        android:layout_marginHorizontal="14dp"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
