--- a/app/src/main/res/layout/fragment_lead_profile.xml
+++ b/app/src/main/res/layout/fragment_lead_profile.xml
@@ -41,7 +41,8 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingBottom="16dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -119,17 +120,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="14dp"
                 app:layout_constraintTop_toBottomOf="@id/buttonsChain" />
-
-            <TextView
+            <include
+                android:id="@+id/tagsAndInterests"
+                layout="@layout/tags_and_interests"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="20dp"
-                android:text="Tags and Interests"
-                android:textColor="@color/dark_blue"
-                android:textSize="20sp"
-                android:textStyle="bold"
+                android:layout_marginHorizontal="14dp"
                 app:layout_constraintTop_toBottomOf="@id/generaInfoForm" />
+
+
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
