--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="tag_bg_color">#EDEDF3</color>
     <color name="tag_text_color">#6E6F89</color>
     <color name="sub_header_color">#666782</color>
+    <color name="primary_button_color">#9D95FF</color>
 </resources>
