--- a/app/src/main/res/layout/fragment_add_lead.xml
+++ b/app/src/main/res/layout/fragment_add_lead.xml
@@ -4,35 +4,178 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:clipToPadding="false"
-    tools:context=".ui.fragments.AddLeadFragment"
-    android:background="@color/white">
+    tools:context=".ui.fragments.AddLeadFragment">
+
+    <FrameLayout
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:gravity="center_vertical"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Lead information"
+            android:textColor="@color/dark_blue"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/btnBack"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="12dp"
+            android:src="@drawable/ic_arrow_back" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_gravity="bottom"
+            android:background="@color/divider_color" />
+    </FrameLayout>
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toTopOf="@id/btnSave">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.example.leadcrm.ui.customviews.EditTextCustomView
+                android:id="@+id/etFirstName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="5dp"
+                app:hint="First name"
+                app:label="First name"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/etLastName"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.example.leadcrm.ui.customviews.EditTextCustomView
+                android:id="@+id/etLastName"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="10dp"
+                app:hint="Last name"
+                app:label="Last name"
+                app:layout_constraintLeft_toRightOf="@id/etFirstName"
+                app:layout_constraintRight_toRightOf="parent"
+               app:layout_constraintTop_toTopOf="parent" />
+
+            <com.example.leadcrm.ui.customviews.SpinnerCustomView
+                android:id="@+id/spLeadType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/etFirstName"
+                app:spinnerHint="Lead type" />
+
+            <com.example.leadcrm.ui.customviews.SpinnerCustomView
+                android:id="@+id/spCountry"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/spLeadType"
+                app:spinnerHint="Country" />
+
+            <com.example.leadcrm.ui.customviews.SpinnerCustomView
+                android:id="@+id/spCity"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="5dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/spLanguage"
+                app:layout_constraintTop_toBottomOf="@+id/spCountry"
+                app:spinnerHint="City" />
+
+            <com.example.leadcrm.ui.customviews.SpinnerCustomView
+                android:id="@+id/spLanguage"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginRight="10dp"
+                app:layout_constraintLeft_toRightOf="@id/spCity"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/spCountry"
+                app:spinnerHint="Language" />
+
+            <com.example.leadcrm.ui.customviews.EditTextCustomView
+                android:id="@+id/etNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="16dp"
+                app:label="Number"
+                app:layout_constraintTop_toBottomOf="@+id/spLanguage" />
+
+            <com.example.leadcrm.ui.customviews.EditTextCustomView
+                android:id="@+id/etEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="16dp"
+                app:label="Email"
+                app:hint="johndoe@mail.com"
+                app:layout_constraintTop_toBottomOf="@+id/etNumber" />
+
+            <com.example.leadcrm.ui.customviews.SpinnerCustomView
+                android:id="@+id/spSource"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@+id/etEmail"
+                app:spinnerHint="Lead type" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnSave"
         style="@style/PrimaryButtonStyle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginVertical="16dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="16dp"
         android:text="Save"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/btnCancel"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnCancel"
         style="@style/SecondaryButtonStyle"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginVertical="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="8dp"
         android:text="Cancel"
-        app:layout_constraintTop_toBottomOf="@+id/btnSave" />
-
-
-    <com.example.leadcrm.ui.customviews.SpinnerCustomView
-        android:id="@+id/customSpinner"
-        android:layout_margin="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/btnCancel"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btnSave" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
