--- a/app/src/main/res/layout/fragment_lead_list.xml
+++ b/app/src/main/res/layout/fragment_lead_list.xml
@@ -29,151 +29,12 @@
             android:textSize="16sp" />
     </LinearLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvLeads"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
-
-        <View
-            android:id="@+id/topDivider"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/divider_color"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <View
-            android:id="@+id/bottomDivider"
-            android:layout_width="match_parent"
-            android:layout_height="2dp"
-            android:background="@color/divider_color"
-            app:layout_constraintBottom_toBottomOf="parent" />
-
-        <FrameLayout
-            android:id="@+id/profileImgContainer"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="12dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent">
-
-            <ImageView
-                android:id="@+id/ivProfile"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@drawable/blue_profile_bg" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:text="JH"
-                android:textColor="@color/white"
-                android:textSize="24sp"
-                android:textStyle="bold" />
-        </FrameLayout>
-
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:text="James Hetfield"
-            android:textColor="@color/dark_blue"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toRightOf="@+id/profileImgContainer"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@id/profileImgContainer" />
-
-        <TextView
-            android:id="@+id/attributeOne"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/attributes_bg"
-            android:paddingHorizontal="14dp"
-            android:paddingVertical="4dp"
-            android:text="Buy"
-            android:textColor="@color/grey"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="@+id/tvName"
-            app:layout_constraintTop_toBottomOf="@+id/tvName" />
-        <TextView
-            android:id="@+id/optionsSet"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/attributes_bg"
-            android:paddingHorizontal="14dp"
-            android:paddingVertical="4dp"
-            android:text="Options set"
-            android:textColor="@color/grey"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:layout_marginLeft="6dp"
-            app:layout_constraintLeft_toRightOf="@id/attributeOne"
-            app:layout_constraintTop_toBottomOf="@+id/tvName" />
-        <TextView
-            android:id="@+id/adWords"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/attributes_bg"
-            android:paddingHorizontal="14dp"
-            android:paddingVertical="4dp"
-            android:text="AdWords"
-            android:textColor="@color/grey"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:layout_marginLeft="6dp"
-            app:layout_constraintLeft_toRightOf="@id/optionsSet"
-            app:layout_constraintTop_toBottomOf="@+id/tvName" />
-        <TextView
-            android:id="@+id/facebook"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:background="@drawable/attributes_bg"
-            android:paddingHorizontal="14dp"
-            android:paddingVertical="4dp"
-            android:text="Facebook"
-            android:textColor="@color/grey"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            android:layout_marginLeft="6dp"
-            app:layout_constraintLeft_toRightOf="@id/adWords"
-            app:layout_constraintTop_toBottomOf="@+id/tvName" />
-
-        <TextView
-            android:id="@+id/tvCreatedDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="12dp"
-            android:text="Created date: 17.10.2021"
-            android:textColor="@color/grey"
-            android:textSize="15sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/attributeOne" />
-
-        <TextView
-            android:id="@+id/tvUpdatedDate"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="Created date: 17.10.2021"
-            android:textColor="@color/grey"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toTopOf="@id/bottomDivider"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvCreatedDate" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
