--- a/app/src/main/res/layout/lead_item_layout.xml
+++ b/app/src/main/res/layout/lead_item_layout.xml
@@ -47,7 +47,7 @@
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
         android:text="James Hetfield"
@@ -55,8 +55,17 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@+id/profileImgContainer"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/profileImgContainer" />
+    <TextView
+        android:id="@+id/tvEmoji"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginLeft="4dp"
+        android:textColor="@color/dark_blue"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toRightOf="@+id/tvName"
+        app:layout_constraintTop_toTopOf="@id/tvName"
+        app:layout_constraintBottom_toBottomOf="@id/tvName"/>
 
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/adSources"
@@ -65,6 +74,7 @@
         app:layout_constraintTop_toBottomOf="@id/tvName"
         app:layout_constraintLeft_toLeftOf="@id/tvName"
         app:layout_constraintRight_toRightOf="parent"
+
         >
     </com.google.android.material.chip.ChipGroup>
 
