--- a/app/src/main/res/layout/fragment_lead_list.xml
+++ b/app/src/main/res/layout/fragment_lead_list.xml
@@ -13,6 +13,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
+            android:id="@+id/btnAddNewLead"
             android:layout_width="19dp"
             android:layout_height="18dp"
             android:layout_gravity="center_vertical"
@@ -20,6 +21,7 @@
             android:src="@drawable/ic_add_lead" />
 
         <TextView
+            android:id="@+id/tvAddNewLead"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
