--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,7 +8,14 @@
         android:id="@+id/leadListFragment"
         android:name="com.example.leadcrm.ui.fragments.LeadListFragment"
         android:label="fragment_lead_list"
-        tools:layout="@layout/fragment_lead_list" />
+        tools:layout="@layout/fragment_lead_list" >
+        <action
+            android:id="@+id/navigateToAddLead"
+            app:destination="@id/addLeadFragment" />
+        <action
+            android:id="@+id/navigateToLeadProfile"
+            app:destination="@id/leadProfileFragment" />
+    </fragment>
     <fragment
         android:id="@+id/addLeadFragment"
         android:name="com.example.leadcrm.ui.fragments.AddLeadFragment"
