--- a/app/src/main/res/layout/lead_item_layout.xml
+++ b/app/src/main/res/layout/lead_item_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/itemView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintTop_toBottomOf="@id/toolbar">
@@ -56,6 +57,7 @@
         android:textStyle="bold"
         app:layout_constraintLeft_toRightOf="@+id/profileImgContainer"
         app:layout_constraintTop_toTopOf="@id/profileImgContainer" />
+
     <TextView
         android:id="@+id/tvEmoji"
         android:layout_width="24dp"
@@ -63,20 +65,19 @@
         android:layout_marginLeft="4dp"
         android:textColor="@color/dark_blue"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="@id/tvName"
         app:layout_constraintLeft_toRightOf="@+id/tvName"
-        app:layout_constraintTop_toTopOf="@id/tvName"
-        app:layout_constraintBottom_toBottomOf="@id/tvName"/>
+        app:layout_constraintTop_toTopOf="@id/tvName" />
 
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/adSources"
         android:layout_width="0dp"
         android:layout_height="42dp"
-        app:layout_constraintTop_toBottomOf="@id/tvName"
         app:layout_constraintLeft_toLeftOf="@id/tvName"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvName"
 
-        >
-    </com.google.android.material.chip.ChipGroup>
+        ></com.google.android.material.chip.ChipGroup>
 
 
     <TextView
