--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -11,4 +11,10 @@
         <attr name="spinnerHint" format="string" />
         <attr name="spinnerError" format="boolean"/>
     </declare-styleable>
+
+    <declare-styleable name="TextViewCustomView">
+        <attr name="tvLabel" format="string" />
+        <attr name="tvText" format="string" />
+        <attr name="tvError" format="boolean" />
+    </declare-styleable>
 </resources>
