--- a/app/src/main/res/layout/fragment_add_lead.xml
+++ b/app/src/main/res/layout/fragment_add_lead.xml
@@ -42,8 +42,9 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintBottom_toTopOf="@id/btnSave">
+        app:layout_constraintBottom_toTopOf="@id/btnSave"
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -72,39 +73,45 @@
                 app:label="Last name"
                 app:layout_constraintLeft_toRightOf="@id/etFirstName"
                 app:layout_constraintRight_toRightOf="parent"
-               app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <com.example.leadcrm.ui.customviews.SpinnerCustomView
+            <com.example.leadcrm.ui.customviews.TextViewCustomView
                 android:id="@+id/spLeadType"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/etFirstName"
-                app:spinnerHint="Lead type" />
+                app:CustomTvLabel="Lead type"
+                app:CustomTvText="Type"
+                app:ShowDialogIcon="true"
+                app:layout_constraintTop_toBottomOf="@+id/etFirstName" />
 
-            <com.example.leadcrm.ui.customviews.SpinnerCustomView
+            <com.example.leadcrm.ui.customviews.TextViewCustomView
                 android:id="@+id/spCountry"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/spLeadType"
-                app:spinnerHint="Country" />
+                app:CustomTvLabel="Country"
+                app:CustomTvText="Country"
+                app:ShowDialogIcon="true"
+                app:layout_constraintTop_toBottomOf="@+id/spLeadType" />
 
-            <com.example.leadcrm.ui.customviews.SpinnerCustomView
+            <com.example.leadcrm.ui.customviews.TextViewCustomView
                 android:id="@+id/spCity"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginRight="5dp"
+                app:CustomTvLabel="City"
+                app:CustomTvText="City"
+                app:ShowDialogIcon="true"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/spLanguage"
-                app:layout_constraintTop_toBottomOf="@+id/spCountry"
-                app:spinnerHint="City" />
+                app:layout_constraintTop_toBottomOf="@+id/spCountry" />
 
-            <com.example.leadcrm.ui.customviews.SpinnerCustomView
+            <com.example.leadcrm.ui.customviews.TextViewCustomView
                 android:id="@+id/spLanguage"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -112,10 +119,12 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginRight="10dp"
+                app:CustomTvLabel="Language"
+                app:CustomTvText="Language"
+                app:ShowDialogIcon="true"
                 app:layout_constraintLeft_toRightOf="@id/spCity"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/spCountry"
-                app:spinnerHint="Language" />
+                app:layout_constraintTop_toBottomOf="@+id/spCountry" />
 
             <com.example.leadcrm.ui.customviews.EditTextCustomView
                 android:id="@+id/etNumber"
@@ -132,23 +141,24 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="16dp"
-                app:label="Email"
                 app:hint="johndoe@mail.com"
+                app:label="Email"
                 app:layout_constraintTop_toBottomOf="@+id/etNumber" />
 
-            <com.example.leadcrm.ui.customviews.SpinnerCustomView
+            <com.example.leadcrm.ui.customviews.TextViewCustomView
                 android:id="@+id/spSource"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/etEmail"
-                app:spinnerHint="Lead type" />
+                app:CustomTvLabel="Source"
+                app:CustomTvText="Select source"
+                app:ShowDialogIcon="true"
+                app:layout_constraintTop_toBottomOf="@+id/etEmail" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
-
 
 
     <androidx.appcompat.widget.AppCompatButton
