--- a/app/src/main/res/layout/text_view_custom_view.xml
+++ b/app/src/main/res/layout/text_view_custom_view.xml
@@ -13,7 +13,6 @@
         android:padding="12dp"
         android:text="Hint"
         android:textColor="@color/edit_text_hint_color"
-        android:textColorHint="@color/edit_text_hint_color"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -30,11 +29,13 @@
         android:text="Label"
         android:textColor="@color/edit_text_label_color"
         android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/tvText"
         app:layout_constraintLeft_toLeftOf="@id/tvText"
         app:layout_constraintTop_toTopOf="@id/tvText" />
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/ivDialogIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="16dp"
