--- a/app/src/main/res/layout/edit_text_custom_view.xml
+++ b/app/src/main/res/layout/edit_text_custom_view.xml
@@ -18,6 +18,7 @@
         android:textSize="16sp"
         android:padding="12dp"
         android:textColor="@color/dark_blue"
+        android:maxLines="1"
         />
 
     <TextView
