--- a/app/src/main/res/layout/fragment_add_lead.xml
+++ b/app/src/main/res/layout/fragment_add_lead.xml
@@ -126,14 +126,14 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/spCountry" />
 
-            <com.example.leadcrm.ui.customviews.EditTextCustomView
+            <com.example.leadcrm.ui.customviews.TextViewCustomView
                 android:id="@+id/etNumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="16dp"
-                app:hint="Number"
-                app:label="Number"
+                app:CustomTvText="Number"
+                app:CustomTvLabel="Number"
                 app:layout_constraintTop_toBottomOf="@+id/spLanguage" />
 
             <com.example.leadcrm.ui.customviews.EditTextCustomView
